fixed alignment for dollars, cents, arrows, restaurant and food, and statistic text

--- a/src/containers/StatisticsView/StatisticsView.css
+++ b/src/containers/StatisticsView/StatisticsView.css
@@ -70,11 +70,12 @@
 }
 
 .fork-icon {
-	height: 20px;
-	width: 20px;
+	height: 16px;
+	width: 16px;
 	color: rgba(255, 255, 255, 1);	
 		filter: invert(100%);
-
+	padding-right: 7px;
+	margin-top: 2px;
 
 }
 
@@ -120,16 +121,55 @@
 }
 
 .food-and-restaurants-text {
-
+	margin-bottom: 40px;
+	opacity: 0.6;
 
 }
 
 .dollars {
-	position: relative;
+	/*position: relative;*/
 	/*display: inline;*/
 	/*margin: auto;*/
-	top: 80;
+	/*top: 80;
+	bottom: 0;
+	left: 0;
+	right: 0;*/
+}
+
+.dollar-text {
+	position: relative;
+	/*display: inline;*/
+	margin: auto;
+	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
+}
+
+.cents-and-arrow {
+	/*height: 90px;*/
+	/*padding-bottom: 10px;*/
+	padding-top: 18px;
+	margin-left: -26px;
+}
+
+.cents-and-arrow-right {
+	margin-left: -36px;
+}
+
+.blue-cents-line {
+	/*height: 100vh;*/
+	/*height: 100vw;*/
+	height: 20px;
+	width: 20px;
+	margin-left: -2px;
+	margin-top: -1px;
+}
+
+.cents-number {
+	margin-top: -3px;
+}
+
+.text-230 {
+
 }
